<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Main!</string>
    <string name="app_name">DroidGourmet</string>
    <string name="but_menu1">but_menu1</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="receitas">Receitas</string>
    <string name="compras">Compras</string>
    <string name="dispensa">Dispensa</string>
    <string name="avisos">Avisos</string>
</resources>
