<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center">
    <TableLayout android:layout_width="match_parent" android:id="@+id/tableLayout1" android:layout_height="wrap_content">
    </TableLayout>
    <TableLayout android:layout_width="match_parent" android:id="@+id/tableLayout2" android:layout_height="match_parent">
        <Button android:layout_width="wrap_content" android:id="@+id/button1" android:layout_height="wrap_content" android:text="@string/receitas"></Button>
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/Receitas" android:text="@string/ingredientes"></Button>
        <Button android:layout_width="wrap_content" android:id="@+id/Ingredientes" android:layout_height="wrap_content" android:text="@string/compras"></Button>
        <Button android:layout_width="wrap_content" android:text="@string/dispensa" android:id="@+id/button4" android:layout_height="wrap_content"></Button>
        <Button android:layout_width="wrap_content" android:text="@string/avisos" android:id="@+id/button5" android:layout_height="wrap_content"></Button>
    </TableLayout>
    
</LinearLayout>
